--- a/css/style-green.css
+++ b/css/style-green.css
@@ -1,13 +1,3 @@
-/*
-  Theme Name: DevFolio
-  Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
-/*======================================
-//--//-->   STYLES GENERALES
-======================================*/
 
 body {
   background-color: #f5f5f5;
@@ -210,10 +200,10 @@ a:hover {
 }
 
 .socials .ico-circle {
-  height: 40px;
+  height: 60px;
   width: 40px;
   font-size: 1.7rem;
-  border-radius: 50%;
+  border-radius: 20%;
   line-height: 1.4;
   margin: 0 15px 0 0;
   box-shadow: 0 0 0 3px #24b67e;
@@ -756,7 +746,7 @@ a:hover {
   height: 60px;
   width: 60px;
   line-height: 1.8;
-  box-shadow: 0 0 0 10px #bbf5df;
+  box-shadow: 0 0 0 10px #ffffff3d;
 }
 
 .counter-num .counter {
